--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -8,14 +8,17 @@
   </head>
   <body>
     <div class="navbar">
-      <div></div>
-      <nav class="nav">
-        <ul>
-          <li>Home</li>
-          <li>Services</li>
-          <li>About Us</li>
+      <div class="logo">Logo</div>
+      <div class="nav">
+        <ul class="nav-links">
+          <li><a href="">Home</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Career</a></li>
+          <li><a href="">Let's Talk</a></li>
         </ul>
-      </nav>
+      </div>
+      <div class="login">Right</div>
     </div>
   </body>
 </html>
