--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -3,22 +3,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yearn AI</title>
+    <title>
+      Accelerate the development of AI application to Africa | Yearn AI
+    </title>
     <link rel="stylesheet" href="./navbar.css" />
   </head>
   <body>
     <div class="navbar">
-      <div class="logo">Logo</div>
+      <div class="logo">Yearn</div>
       <div class="nav">
         <ul class="nav-links">
-          <li><a href="">Home</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Career</a></li>
-          <li><a href="">Let's Talk</a></li>
+          <li><a href="">Company</a></li>
+          <li><a href="">Products</a></li>
+          <li><a href="">Solutions</a></li>
+          <li><a href="">Customers</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Resources</a></li>
+          <li><a href="">Conference</a></li>
         </ul>
       </div>
-      <div class="login">Right</div>
+      <div class="contact-us">
+        <ul class="nav-links">
+          <li><a href="">Talk to Sales</a></li>
+          <li><a href="">Sign Up</a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
