--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -16,7 +16,8 @@
           <li><a href="">Company</a></li>
           <li><a href="">Products</a></li>
           <li><a href="">Solutions</a></li>
-          <li><a href="">Customers</a></li>
+          <li><a href="">Research</a></li>
+          <li><a href="">Clients</a></li>
           <li><a href="">Pricing</a></li>
           <li><a href="">Resources</a></li>
           <li><a href="">Conference</a></li>
