--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -12,8 +12,20 @@
     <div class="navbar">
       <div class="logo">Yearn</div>
       <div class="nav">
-        <ul class="nav-links">
+        <h3 class="nav-title">Company</h3>
+        <ul class="nav-links-popover">
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Careers</a></li>
+          <li><a href="">Security</a></li>
+          <li><a href="">Legal</a></li>
+        </ul>
+      </div>
+      <div class="nav">
+        <h3 class="nav-title">Solutions</h3>
+        <ul class="nav-links-popover">
           <li><a href="">Company</a></li>
+
           <li><a href="">Products</a></li>
           <li><a href="">Solutions</a></li>
           <li><a href="">Research</a></li>
@@ -23,6 +35,48 @@
           <li><a href="">Conference</a></li>
         </ul>
       </div>
+      <div class="nav">
+        <h3 class="nav-title">Products</h3>
+        <ul class="nav-links-popover">
+          <li><a href="">Solutions</a></li>
+          <li><a href="">Research</a></li>
+          <li><a href="">Clients</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Resources</a></li>
+          <li><a href="">Conference</a></li>
+        </ul>
+      </div>
+      <div class="nav">
+        <h3 class="nav-title">Research</h3>
+        <ul class="nav-links-popover">
+          <li><a href="">Clients</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Resources</a></li>
+          <li><a href="">Conference</a></li>
+        </ul>
+      </div>
+      <div class="nav">
+        <h3 class="nav-title">Clients</h3>
+        <ul class="nav-links-popover">
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Resources</a></li>
+          <li><a href="">Conference</a></li>
+        </ul>
+      </div>
+      <div class="nav">
+        <h3 class="nav-title">Pricing</h3>
+        <ul class="nav-links-popover">
+          <li><a href="">Resources</a></li>
+          <li><a href="">Conference</a></li>
+        </ul>
+      </div>
+      <div class="nav">
+        <h3 class="nav-title">Resources</h3>
+        <ul class="nav-links-popover">
+          <li><a href="">Conference</a></li>
+        </ul>
+      </div>
+
       <div class="contact-us">
         <ul class="nav-links">
           <li><a href="">Talk to Sales</a></li>
