--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -10,76 +10,80 @@
   </head>
   <body>
     <div class="navbar">
-      <div class="logo">Yearn</div>
-      <div class="nav">
-        <h3 class="nav-title">Company</h3>
-        <ul class="nav-links-popover">
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">Careers</a></li>
-          <li><a href="">Security</a></li>
-          <li><a href="">Legal</a></li>
-        </ul>
-      </div>
-      <div class="nav">
-        <h3 class="nav-title">Solutions</h3>
-        <ul class="nav-links-popover">
-          <li><a href="">Company</a></li>
+      <div class="logo">Yearn AI</div>
 
-          <li><a href="">Products</a></li>
-          <li><a href="">Solutions</a></li>
-          <li><a href="">Research</a></li>
-          <li><a href="">Clients</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Resources</a></li>
-          <li><a href="">Conference</a></li>
-        </ul>
-      </div>
-      <div class="nav">
-        <h3 class="nav-title">Products</h3>
-        <ul class="nav-links-popover">
-          <li><a href="">Solutions</a></li>
-          <li><a href="">Research</a></li>
-          <li><a href="">Clients</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Resources</a></li>
-          <li><a href="">Conference</a></li>
-        </ul>
-      </div>
-      <div class="nav">
-        <h3 class="nav-title">Research</h3>
-        <ul class="nav-links-popover">
-          <li><a href="">Clients</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Resources</a></li>
-          <li><a href="">Conference</a></li>
-        </ul>
-      </div>
-      <div class="nav">
-        <h3 class="nav-title">Clients</h3>
-        <ul class="nav-links-popover">
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Resources</a></li>
-          <li><a href="">Conference</a></li>
-        </ul>
-      </div>
-      <div class="nav">
-        <h3 class="nav-title">Pricing</h3>
-        <ul class="nav-links-popover">
-          <li><a href="">Resources</a></li>
-          <li><a href="">Conference</a></li>
-        </ul>
-      </div>
-      <div class="nav">
-        <h3 class="nav-title">Resources</h3>
-        <ul class="nav-links-popover">
-          <li><a href="">Conference</a></li>
-        </ul>
+      <div class="navigation">
+        <div class="nav">
+          <p class="nav-title">Company</p>
+          <ul class="nav-links-popover">
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="">Security</a></li>
+            <li><a href="">Legal</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Data Annotation</p>
+          <ul class="nav-links-popover">
+            <li><a href="">3D Sensor Fusion </a></li>
+            <li><a href="">Image</a></li>
+            <li><a href="">Video</a></li>
+            <li><a href="">Text</a></li>
+            <li><a href="">Studio</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Industries</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Retail & eCommerce</a></li>
+            <li><a href="">Logistics</a></li>
+            <li><a href="">Defense</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Use Cases</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Autonomus Vehicles</a></li>
+            <li><a href="">Robotics</a></li>
+            <li><a href="">AR/VR</a></li>
+            <li><a href="">Content & Language</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title"><a href="">Pricing</a></p>
+          <!-- <ul class="nav-links">
+            <li><a href="">Pricing</a></li>
+          </ul> -->
+        </div>
+        <div class="nav">
+          <p class="nav-title">Clients</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Yearn AI</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Resources</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Resource Library</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Documentation</a></li>
+            <li><a href="">Events</a></li>
+            <li><a href="">Guides</a></li>
+            <li><a href="">Open Datasets</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title"><a href="">Conferences</a></p>
+          <!-- <ul class="nav-links">
+            <li><a href="">Conference</a></li>
+          </ul> -->
+        </div>
       </div>
 
       <div class="contact-us">
         <ul class="nav-links">
-          <li><a href="">Talk to Sales</a></li>
+          <li class="sales"><a href="">Talk to Sales</a></li>
           <li><a href="">Sign Up</a></li>
         </ul>
       </div>
