--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Accelerate the development of AI application to Africa | Yearn AI
+      Accelerate the development of AI application in Africa | Yearn AI
     </title>
     <link rel="stylesheet" href="./navbar.css" />
   </head>
@@ -36,6 +36,7 @@
         <div class="nav">
           <p class="nav-title">Industries</p>
           <ul class="nav-links-popover">
+            <li><a href="">Sports</a></li>
             <li><a href="">Retail & eCommerce</a></li>
             <li><a href="">Logistics</a></li>
             <li><a href="">Defense</a></li>
@@ -83,7 +84,8 @@
 
       <div class="contact-us">
         <ul class="nav-links">
-          <li class="sales"><a href="">Talk to Sales</a></li>
+          <li><a href="">Talk To Sales</a></li>
+          <li class="ai-ml-classroom"><a href="">AI & ML Classroom</a></li>
           <li><a href="">Sign Up</a></li>
         </ul>
       </div>
