--- a/web_static/index.html
+++ b/web_static/index.html
@@ -6,12 +6,90 @@
     <title>
       Accelerate the development of AI application in Africa | Yearn AI
     </title>
-    <link rel="stylesheet" href="/styles/common.css" />
-    <link rel="stylesheet" href="/styles/header.css" />
-    <link rel="stylesheet" href="/styles/footer.css" />
+    <link rel="stylesheet" href="/styles/navbar.css" />
+    <link rel="icon" href="/images/logo.png" />
   </head>
   <body>
-    <header></header>
-    <footer>Yearn AI</footer>
+    <div class="navbar">
+      <!-- <div class="logo">Yearn AI</div> -->
+      <img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img" />
+      <div class="navigation">
+        <div class="nav">
+          <p class="nav-title">Company</p>
+          <ul class="nav-links-popover">
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="">Security</a></li>
+            <li><a href="">Legal</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Data Annotation</p>
+          <ul class="nav-links-popover">
+            <li><a href="">3D Sensor Fusion </a></li>
+            <li><a href="">Image</a></li>
+            <li><a href="">Video</a></li>
+            <li><a href="">Text</a></li>
+            <li><a href="">Studio</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Industries</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Sports</a></li>
+            <li><a href="">Retail & eCommerce</a></li>
+            <li><a href="">Logistics</a></li>
+            <li><a href="">Defense</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Use Cases</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Autonomus Vehicles</a></li>
+            <li><a href="">Robotics</a></li>
+            <li><a href="">AR/VR</a></li>
+            <li><a href="">Content & Language</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title"><a href="">Pricing</a></p>
+          <!-- <ul class="nav-links">
+            <li><a href="">Pricing</a></li>
+          </ul> -->
+        </div>
+        <div class="nav">
+          <p class="nav-title">Clients</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Yearn AI</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Resources</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Resource Library</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Documentation</a></li>
+            <li><a href="">Events</a></li>
+            <li><a href="">Guides</a></li>
+            <li><a href="">Open Datasets</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title"><a href="">Conferences</a></p>
+          <!-- <ul class="nav-links">
+            <li><a href="">Conference</a></li>
+          </ul> -->
+        </div>
+      </div>
+
+      <div class="contact-us">
+        <ul class="nav-links">
+          <li><a href="">Talk To Sales</a></li>
+          <li class="ai-ml-classroom"><a href="">AI & ML Classroom</a></li>
+          <li><a href="">Sign Up</a></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
