--- a/web_static/index.html
+++ b/web_static/index.html
@@ -6,6 +6,7 @@
     <title>
       Accelerate the development of AI application in Africa | Yearn AI
     </title>
+    <link rel="stylesheet" href="/styles/common.css" />
     <link rel="stylesheet" href="/styles/navbar.css" />
     <link rel="icon" href="/images/logo.png" />
   </head>
