Add footer styles

--- a/web_static/index.html
+++ b/web_static/index.html
@@ -8,11 +8,11 @@
     </title>
     <link rel="stylesheet" href="/styles/common.css" />
     <link rel="stylesheet" href="/styles/navbar.css" />
+    <link rel="stylesheet" href="/styles/footer.css">
     <link rel="icon" href="/images/logo.png" />
   </head>
   <body>
-    <div class="container">
-      <div class="navbar">
+    <div class="navbar">
         <!-- <div class="logo">Yearn AI</div> -->
         <img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img" />
         <div class="navigation">
@@ -48,7 +48,7 @@
           <div class="nav">
             <p class="nav-title">Use Cases</p>
             <ul class="nav-links-popover">
-              <li><a href="">Athletic Games</a></li>
+              <li><a href="">Athletics</a></li>
               <li><a href="">Autonomus Vehicles</a></li>
               <li><a href="">Robotics</a></li>
               <li><a href="">AR/VR</a></li>
@@ -76,25 +76,23 @@
               <li><a href="">Events</a></li>
               <li><a href="">Guides</a></li>
               <li><a href="">Open Datasets</a></li>
+              <li><a href="">Research & Development </a></li>
               <li><a href="">Resource Library</a></li>
             </ul>
           </div>
-          <div class="nav">
-            <!-- <p class="nav-title"><a href="">Conferences</a></p> -->
-            <!-- <ul class="nav-links">
-            <li><a href="">Conference</a></li>
-          </ul> -->
-          </div>
         </div>
 
-        <div class="contact-us">
+        <div class="classroom">
           <ul class="nav-links">
             <li><a href="">Talk To Sales</a></li>
-            <li class="ai-ml-classroom"><a href="">AI & ML Classroom</a></li>
+            <li class="ai-ml-classroom"><a href="">Classroom</a></li>
             <!-- <li><a href="">Sign Up</a></li> -->
           </ul>
         </div>
-      </div>
     </div>
+    <div class="container"></div>
+      <main><h1>Main Content</h1></main>
+    </div>
+    <footer>Yearn AI 2023</footer>
   </body>
 </html>
