--- a/web_static/index.html
+++ b/web_static/index.html
@@ -8,89 +8,89 @@
     </title>
     <link rel="stylesheet" href="/styles/common.css" />
     <link rel="stylesheet" href="/styles/navbar.css" />
-    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="/styles/footer.css" />
     <link rel="icon" href="/images/logo.png" />
   </head>
   <body>
     <div class="navbar">
-        <!-- <div class="logo">Yearn AI</div> -->
-        <img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img" />
-        <div class="navigation">
-          <div class="nav">
-            <p class="nav-title">Company</p>
-            <ul class="nav-links-popover">
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
-              <li><a href="">Careers</a></li>
-              <li><a href="">Security</a></li>
-              <li><a href="">Legal</a></li>
-            </ul>
-          </div>
-          <div class="nav">
-            <p class="nav-title">Data Annotation</p>
-            <ul class="nav-links-popover">
-              <li><a href="">3D Sensor Fusion </a></li>
-              <li><a href="">Image</a></li>
-              <li><a href="">Video</a></li>
-              <li><a href="">Text</a></li>
-              <li><a href="">Studio</a></li>
-            </ul>
-          </div>
-          <div class="nav">
-            <p class="nav-title">Industries</p>
-            <ul class="nav-links-popover">
-              <li><a href="">Sports</a></li>
-              <li><a href="">Retail & eCommerce</a></li>
-              <li><a href="">Logistics</a></li>
-              <li><a href="">Defense</a></li>
-            </ul>
-          </div>
-          <div class="nav">
-            <p class="nav-title">Use Cases</p>
-            <ul class="nav-links-popover">
-              <li><a href="">Athletics</a></li>
-              <li><a href="">Autonomus Vehicles</a></li>
-              <li><a href="">Robotics</a></li>
-              <li><a href="">AR/VR</a></li>
-              <li><a href="">Content & Language</a></li>
-            </ul>
-          </div>
-          <div class="nav">
-            <p class="nav-title"><a href="">Pricing</a></p>
-            <!-- <ul class="nav-links">
-            <li><a href="">Pricing</a></li>
-          </ul> -->
-          </div>
-          <div class="nav">
-            <p class="nav-title">Clients</p>
-            <ul class="nav-links-popover">
-              <li><a href="">Yearn AI</a></li>
-            </ul>
-          </div>
-          <div class="nav">
-            <p class="nav-title">Resources</p>
-            <ul class="nav-links-popover">
-              <li><a href="">Blog</a></li>
-              <li><a href="">Conferences</a></li>
-              <li><a href="">Documentation</a></li>
-              <li><a href="">Events</a></li>
-              <li><a href="">Guides</a></li>
-              <li><a href="">Open Datasets</a></li>
-              <li><a href="">Research & Development </a></li>
-              <li><a href="">Resource Library</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="classroom">
-          <ul class="nav-links">
-            <li><a href="">Talk To Sales</a></li>
-            <li class="ai-ml-classroom"><a href="">Classroom</a></li>
-            <!-- <li><a href="">Sign Up</a></li> -->
+      <!-- <div class="logo">Yearn AI</div> -->
+      <img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img" />
+      <div class="navigation">
+        <div class="nav">
+          <p class="nav-title">Company</p>
+          <ul class="nav-links-popover">
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="">Security</a></li>
+            <li><a href="">Legal</a></li>
           </ul>
         </div>
+        <div class="nav">
+          <p class="nav-title">Data Annotation</p>
+          <ul class="nav-links-popover">
+            <li><a href="">3D Sensor Fusion </a></li>
+            <li><a href="">Image</a></li>
+            <li><a href="">Video</a></li>
+            <li><a href="">Text</a></li>
+            <li><a href="">Studio</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Industries</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Sports</a></li>
+            <li><a href="">Retail & eCommerce</a></li>
+            <li><a href="">Logistics</a></li>
+            <li><a href="">Defense</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Use Cases</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Athletics</a></li>
+            <li><a href="">Autonomus Vehicles</a></li>
+            <li><a href="">Robotics</a></li>
+            <li><a href="">AR/VR</a></li>
+            <li><a href="">Content & Language</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title"><a href="">Pricing</a></p>
+          <!-- <ul class="nav-links">
+            <li><a href="">Pricing</a></li>
+          </ul> -->
+        </div>
+        <div class="nav">
+          <p class="nav-title">Clients</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Yearn AI</a></li>
+          </ul>
+        </div>
+        <div class="nav">
+          <p class="nav-title">Resources</p>
+          <ul class="nav-links-popover">
+            <li><a href="">Blog</a></li>
+            <li><a href="">Conferences</a></li>
+            <li><a href="">Documentation</a></li>
+            <li><a href="">Events</a></li>
+            <li><a href="">Guides</a></li>
+            <li><a href="">Open Datasets</a></li>
+            <li><a href="">Research & Development </a></li>
+            <li><a href="">Resource Library</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="classroom">
+        <ul class="nav-links">
+          <li><a href="">Talk To Sales</a></li>
+          <li class="ai-ml-classroom"><a href="">Classroom</a></li>
+          <!-- <li><a href="">Sign Up</a></li> -->
+        </ul>
+      </div>
     </div>
-    <div class="container"></div>
+    <div class="container">
       <main><h1>Main Content</h1></main>
     </div>
     <footer>Yearn AI 2023</footer>
