--- a/web_static/index.html
+++ b/web_static/index.html
@@ -20,6 +20,7 @@
           <p class="nav-title">Company</p>
           <ul class="nav-links-popover">
             <li><a href="">About</a></li>
+            <li><a href="">Mindset Change For Young Africans</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="">Careers</a></li>
             <li><a href="">Security</a></li>
