--- a/web_static/index.html
+++ b/web_static/index.html
@@ -28,6 +28,15 @@
           </ul>
         </div>
         <div class="nav">
+          <p class="nav-title">Softwares</p>
+          <ul class="nav-links-popover">
+            <li><a href="">API Applications</a></li>
+            <li><a href="">Desktop Applications</a></li>
+            <li><a href="">Mobile Applications</a></li>
+            <li><a href="">Web Applications</a></li>
+          </ul>
+        </div>
+        <div class="nav">
           <p class="nav-title">Data Annotation</p>
           <ul class="nav-links-popover">
             <li><a href="">3D Sensor Fusion </a></li>
