Add footer section

--- a/web_static/index.html
+++ b/web_static/index.html
@@ -103,6 +103,8 @@
     <div class="container">
       <main><h1>Main Content</h1></main>
     </div>
-    <footer>Yearn AI 2023</footer>
+    <footer>
+      <div></div>
+    </footer>
   </body>
 </html>
