--- a/web_static/index.html
+++ b/web_static/index.html
@@ -104,7 +104,59 @@
       <main><h1>Main Content</h1></main>
     </div>
     <footer>
-      <div></div>
+      <div class="footer-section">
+        <div class="footer-links">
+          <div class="footer-title">
+            <p>Company</p>
+            <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">Mindset Change Project</a></li>
+              <li><a href="">Contact</a></li>
+              <li><a href="">Careers</a></li>
+              <li><a href="">Security</a></li>
+              <li><a href="">Legal</a></li>
+            </ul>
+          </div>
+          <div class="footer-industries">
+            <p>Industries</p>
+            <ul>
+              <li><a href="">Sports</a></li>
+              <li><a href="">Retail & eCommerce</a></li>
+              <li><a href="">Logistics</a></li>
+              <li><a href="">Defense</a></li>
+            </ul>
+          </div>
+          <div class="footer-resources">
+            <p>Resources</p>
+            <ul>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Conferences</a></li>
+              <li><a href="">Documentation</a></li>
+              <li><a href="">Events</a></li>
+              <li><a href="">Guides</a></li>
+              <li><a href="">Open Datasets</a></li>
+              <li><a href="">Research & Development </a></li>
+              <li><a href="">Resource Library</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-social">
+          <div class="footer-legal">
+            <ul>
+              <li><a href="">Terms</a></li>
+              <li><a href="">Privacy</a></li>
+              <li><a href="">Cookies</a></li>
+            </ul>
+          </div>
+          <div class="footer-social-link">
+            <ul>
+              <li><a href="">Facebook</a></li>
+              <li><a href="">LinkedIn</a></li>
+              <li><a href="">Twitter</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
