--- a/web_static/index.html
+++ b/web_static/index.html
@@ -117,7 +117,7 @@
               <li><a href="">Legal</a></li>
             </ul>
           </div>
-          <div class="footer-industries">
+          <div class="footer-title">
             <p>Industries</p>
             <ul>
               <li><a href="">Sports</a></li>
@@ -126,7 +126,7 @@
               <li><a href="">Defense</a></li>
             </ul>
           </div>
-          <div class="footer-resources">
+          <div class="footer-title">
             <p>Resources</p>
             <ul>
               <li><a href="">Blog</a></li>
@@ -138,6 +138,9 @@
               <li><a href="">Research & Development </a></li>
               <li><a href="">Resource Library</a></li>
             </ul>
+          </div>
+          <div class="footer-title">
+            <p>Contact</p>
           </div>
         </div>
         <div class="footer-social">
