--- a/web_static/index.html
+++ b/web_static/index.html
@@ -127,6 +127,25 @@
             </ul>
           </div>
           <div class="footer-title">
+            <p>Use Cases</p>
+            <ul>
+              <li><a href="">Athletics</a></li>
+              <li><a href="">Autonomus Vehicles</a></li>
+              <li><a href="">Robotics</a></li>
+              <li><a href="">AR/VR</a></li>
+              <li><a href="">Content & Language</a></li>
+            </ul>
+          </div>
+          <div class="footer-title">
+            <p>Guides</p>
+            <ul>
+              <li><a href="">Data Labeling</a></li>
+              <li><a href="">Retail & eCommerce</a></li>
+              <li><a href="">Logistics</a></li>
+              <li><a href="">Defense</a></li>
+            </ul>
+          </div>
+          <div class="footer-title">
             <p>Resources</p>
             <ul>
               <li><a href="">Blog</a></li>
@@ -141,22 +160,25 @@
           </div>
           <div class="footer-title">
             <p>Contact</p>
+            <ul>
+              <li>sales@yearnai.tech</li>
+              <li>support@yearnai.tech</li>
+              <li>careers@yearnai.tech</li>
+              <li>press@yearnai.tech</li>
+              <li>Facebook</li>
+              <li>LinkedIn</li>
+              <li>Twitter</li>
+            </ul>
           </div>
         </div>
         <div class="footer-social">
           <div class="footer-legal">
-            <ul>
-              <li><a href="">Terms</a></li>
-              <li><a href="">Privacy</a></li>
-              <li><a href="">Cookies</a></li>
-            </ul>
+            <span
+              ><p>Copyright &copy; 2023 Yearn AI, All rights reserved.</p></span
+            >
           </div>
           <div class="footer-social-link">
-            <ul>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">LinkedIn</a></li>
-              <li><a href="">Twitter</a></li>
-            </ul>
+            <span><p>Terms of Use & Privacy Policy</p></span>
           </div>
         </div>
       </div>
