--- a/web_static/index.html
+++ b/web_static/index.html
@@ -101,13 +101,13 @@
       </div>
     </div>
     <div class="container">
-      <main><h1>Main Content</h1></main>
+      <main><h1>Main Content Goes Here!</h1></main>
     </div>
     <footer>
       <div class="footer-section">
         <div class="footer-links">
           <div class="footer-title">
-            <p>Company</p>
+            <p>COMPANY</p>
             <ul>
               <li><a href="">About</a></li>
               <li><a href="">Mindset Change Project</a></li>
@@ -118,7 +118,7 @@
             </ul>
           </div>
           <div class="footer-title">
-            <p>Industries</p>
+            <p>INDUSTRIES</p>
             <ul>
               <li><a href="">Sports</a></li>
               <li><a href="">Retail & eCommerce</a></li>
@@ -127,7 +127,7 @@
             </ul>
           </div>
           <div class="footer-title">
-            <p>Use Cases</p>
+            <p>USE CASES</p>
             <ul>
               <li><a href="">Athletics</a></li>
               <li><a href="">Autonomus Vehicles</a></li>
@@ -137,16 +137,17 @@
             </ul>
           </div>
           <div class="footer-title">
-            <p>Guides</p>
+            <p>GUIDES</p>
             <ul>
-              <li><a href="">Data Labeling</a></li>
-              <li><a href="">Retail & eCommerce</a></li>
-              <li><a href="">Logistics</a></li>
-              <li><a href="">Defense</a></li>
+              <li><a href="">Data Labeling </a></li>
+              <li><a href="">ML Model Training</a></li>
+              <li><a href="">Guide to AI for eCommerce </a></li>
+              <li><a href="">Computer Vision Applications</a></li>
+              <li><a href="">Diffusion Models</a></li>
             </ul>
           </div>
           <div class="footer-title">
-            <p>Resources</p>
+            <p>RESOURCES</p>
             <ul>
               <li><a href="">Blog</a></li>
               <li><a href="">Conferences</a></li>
@@ -159,26 +160,24 @@
             </ul>
           </div>
           <div class="footer-title">
-            <p>Contact</p>
+            <p>CONTACT</p>
             <ul>
               <li>sales@yearnai.tech</li>
               <li>support@yearnai.tech</li>
               <li>careers@yearnai.tech</li>
               <li>press@yearnai.tech</li>
-              <li>Facebook</li>
               <li>LinkedIn</li>
               <li>Twitter</li>
+              <li>Facebook</li>
             </ul>
           </div>
         </div>
-        <div class="footer-social">
-          <div class="footer-legal">
-            <span
-              ><p>Copyright &copy; 2023 Yearn AI, All rights reserved.</p></span
-            >
+        <div class="copyright">
+          <div class="footer-copyright">
+            <span>Copyright &copy; 2023 Yearn AI, All rights reserved.</span>
           </div>
-          <div class="footer-social-link">
-            <span><p>Terms of Use & Privacy Policy</p></span>
+          <div class="footer-terms">
+            <span><a href="">Terms of Use & Privacy Policy</a></span>
           </div>
         </div>
       </div>
