--- a/web_static/index.html
+++ b/web_static/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="/images/logo.png" />
   </head>
   <body>
+    <!-- Navbar starts! -->
     <div class="navbar">
       <!-- <div class="logo">Yearn AI</div> -->
       <img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img" />
@@ -100,9 +101,15 @@
         </ul>
       </div>
     </div>
+    <!-- Navbar Ends! -->
+
+    <!-- Main Body Content Starts! -->
     <div class="container">
       <main><h1>Main Content Goes Here!</h1></main>
     </div>
+    <!-- Main Body Content Ends! -->
+
+    <!-- Footer Starts! -->
     <footer>
       <div class="footer-section">
         <div class="footer-links">
@@ -182,5 +189,6 @@
         </div>
       </div>
     </footer>
+    <!-- Footer Ends! -->
   </body>
 </html>
