--- a/web_static/index.html
+++ b/web_static/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="/images/logo.png" />
   </head>
   <body>
-    <!-- Navbar starts! -->
+    <!-- Navbar Starts! -->
     <div class="navbar">
       <!-- <div class="logo">Yearn AI</div> -->
       <img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img" />
