--- a/web_static/index.html
+++ b/web_static/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Accelerate the development of AI application in Africa | Yearn AI
+      Accelerate the development of AI applications to Africa | Yearn AI
     </title>
     <link rel="stylesheet" href="/styles/common.css" />
     <link rel="stylesheet" href="/styles/navbar.css" />
