Add links to all pages

--- a/web_static/index.html
+++ b/web_static/index.html
@@ -20,83 +20,132 @@
         <div class="nav">
           <p class="nav-title">Company</p>
           <ul class="nav-links-popover">
-            <li><a href="">About</a></li>
-            <li><a href="">Mindset Change Project</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Careers</a></li>
-            <li><a href="">Security</a></li>
-            <li><a href="">Legal</a></li>
+            <li><a href="/web_static/pages/about.html">About</a></li>
+            <li>
+              <a href="/web_static/pages/mindset_change_project.html"
+                >Mindset Change Project</a
+              >
+            </li>
+            <li><a href="/web_static/pages/contact.html">Contact</a></li>
+            <li><a href="/web_static/pages/careers.html">Careers</a></li>
+            <li><a href="/web_static/pages/security.html">Security</a></li>
+            <li><a href="/web_static/pages/legal.html">Legal</a></li>
           </ul>
         </div>
         <div class="nav">
           <p class="nav-title">Softwares</p>
           <ul class="nav-links-popover">
-            <li><a href="">API Applications</a></li>
-            <li><a href="">Desktop Applications</a></li>
-            <li><a href="">Mobile Applications</a></li>
-            <li><a href="">Web Applications</a></li>
+            <li>
+              <a href="/web_static/pages/api_applications.html"
+                >API Applications</a
+              >
+            </li>
+            <li>
+              <a href="/web_static/pages/desktop_applications.html"
+                >Desktop Applications</a
+              >
+            </li>
+            <li>
+              <a href="/web_static/pages/mobile_applications.html"
+                >Mobile Applications</a
+              >
+            </li>
+            <li>
+              <a href="/web_static/pages/web_applications.html"
+                >Web Applications</a
+              >
+            </li>
           </ul>
         </div>
         <div class="nav">
           <p class="nav-title">Data Annotation</p>
           <ul class="nav-links-popover">
-            <li><a href="">3D Sensor Fusion </a></li>
-            <li><a href="">Image</a></li>
-            <li><a href="">Video</a></li>
-            <li><a href="">Text</a></li>
-            <li><a href="">Studio</a></li>
+            <li>
+              <a href="/web_static/pages/sensor_fusion.html"
+                >3D Sensor Fusion
+              </a>
+            </li>
+            <li><a href="/web_static/pages/image_annotation.html">Image</a></li>
+            <li><a href="/web_static/pages/video_annotation.html">Video</a></li>
+            <li><a href="/web_static/pages/text_annotation.html">Text</a></li>
+            <li><a href="/web_static/pages/studio.html">Studio</a></li>
           </ul>
         </div>
         <div class="nav">
           <p class="nav-title">Industries</p>
           <ul class="nav-links-popover">
-            <li><a href="">Sports</a></li>
-            <li><a href="">Retail & eCommerce</a></li>
-            <li><a href="">Logistics</a></li>
-            <li><a href="">Defense</a></li>
+            <li><a href="/web_static/pages/sports.html">Sports</a></li>
+            <li>
+              <a href="/web_static/pages/retail_ecommerce.html"
+                >Retail & eCommerce</a
+              >
+            </li>
+            <li><a href="/web_static/pages/logistics.html">Logistics</a></li>
+            <li><a href="/web_static/pages/defense.html">Defense</a></li>
           </ul>
         </div>
         <div class="nav">
           <p class="nav-title">Use Cases</p>
           <ul class="nav-links-popover">
-            <li><a href="">Athletics</a></li>
-            <li><a href="">Autonomus Vehicles</a></li>
-            <li><a href="">Robotics</a></li>
-            <li><a href="">AR/VR</a></li>
-            <li><a href="">Content & Language</a></li>
+            <li><a href="/web_static/pages/athletics.html">Athletics</a></li>
+            <li>
+              <a href="/web_static/pages/autonomus_vehicles.html"
+                >Autonomus Vehicles</a
+              >
+            </li>
+            <li><a href="/web_static/pages/robotics.html">Robotics</a></li>
+            <li><a href="/web_static/pages/ar_vr.html">AR/VR</a></li>
+            <li>
+              <a href="/web_static/pages/content_language.html"
+                >Content & Language</a
+              >
+            </li>
           </ul>
         </div>
         <div class="nav">
-          <p class="nav-title"><a href="">Pricing</a></p>
-          <!-- <ul class="nav-links">
-            <li><a href="">Pricing</a></li>
-          </ul> -->
+          <p class="nav-title">
+            <a href="/web_static/pages/pricing.html">Pricing</a>
+          </p>
         </div>
         <div class="nav">
           <p class="nav-title">Clients</p>
           <ul class="nav-links-popover">
-            <li><a href="">Yearn AI</a></li>
+            <li><a href="/web_static/pages/clients.html">Yearn AI</a></li>
           </ul>
         </div>
         <div class="nav">
           <p class="nav-title">Resources</p>
           <ul class="nav-links-popover">
-            <li><a href="">Blog</a></li>
-            <li><a href="">Conferences</a></li>
-            <li><a href="">Documentation</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Guides</a></li>
-            <li><a href="">Open Datasets</a></li>
-            <li><a href="">Research & Development </a></li>
-            <li><a href="">Resource Library</a></li>
+            <li><a href="/web_static/pages/blog.html">Blog</a></li>
+            <li>
+              <a href="/web_static/pages/conferences.html">Conferences</a>
+            </li>
+            <li>
+              <a href="/web_static/pages/documentation.html">Documentation</a>
+            </li>
+            <li><a href="/web_static/pages/events.html">Events</a></li>
+            <li><a href="/web_static/pages/guides.html">Guides</a></li>
+            <li>
+              <a href="/web_static/pages/open_datasets.html">Open Datasets</a>
+            </li>
+            <li>
+              <a href="/web_static/pages/research_development.html"
+                >Research & Development
+              </a>
+            </li>
+            <li>
+              <a href="/web_static/pages/resource_library.html"
+                >Resource Library</a
+              >
+            </li>
           </ul>
         </div>
       </div>
 
       <div class="classroom">
         <ul class="nav-links">
-          <li><a href="">Talk To Sales</a></li>
-          <li class="ai-ml-classroom"><a href="">Classroom</a></li>
+          <li><a href="/web_static/pages/sales.html">Talk To Sales</a></li>
+          <li class="ai-ml-classroom"><a href="#">Classroom</a></li>
           <!-- <li><a href="">Sign Up</a></li> -->
         </ul>
       </div>
@@ -116,54 +165,104 @@
           <div class="footer-title">
             <p>COMPANY</p>
             <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Mindset Change Project</a></li>
-              <li><a href="">Contact</a></li>
-              <li><a href="">Careers</a></li>
-              <li><a href="">Security</a></li>
-              <li><a href="">Legal</a></li>
+              <li><a href="/web_static/pages/about.html">About</a></li>
+              <li>
+                <a href="/web_static/pages/mindset_change_project.html"
+                  >Mindset Change Project</a
+                >
+              </li>
+              <li><a href="/web_static/pages/contact.html">Contact</a></li>
+              <li><a href="/web_static/pages/careers.html">Careers</a></li>
+              <li><a href="/web_static/pages/security.html">Security</a></li>
+              <li><a href="/web_static/pages/legal.html">Legal</a></li>
             </ul>
           </div>
           <div class="footer-title">
             <p>INDUSTRIES</p>
             <ul>
-              <li><a href="">Sports</a></li>
-              <li><a href="">Retail & eCommerce</a></li>
-              <li><a href="">Logistics</a></li>
-              <li><a href="">Defense</a></li>
+              <li><a href="/web_static/pages/sports.html">Sports</a></li>
+              <li>
+                <a href="/web_static/pages/retail_ecommerce.html"
+                  >Retail & eCommerce</a
+                >
+              </li>
+              <li><a href="/web_static/pages/logistics.html">Logistics</a></li>
+              <li><a href="/web_static/pages/defense.html">Defense</a></li>
             </ul>
           </div>
           <div class="footer-title">
             <p>USE CASES</p>
             <ul>
-              <li><a href="">Athletics</a></li>
-              <li><a href="">Autonomus Vehicles</a></li>
-              <li><a href="">Robotics</a></li>
-              <li><a href="">AR/VR</a></li>
-              <li><a href="">Content & Language</a></li>
+              <li><a href="/web_static/pages/athletics.html">Athletics</a></li>
+              <li>
+                <a href="/web_static/pages/autonomus_vehicles.html"
+                  >Autonomus Vehicles</a
+                >
+              </li>
+              <li><a href="/web_static/pages/robotics.html">Robotics</a></li>
+              <li><a href="/web_static/pages/ar_vr.html">AR/VR</a></li>
+              <li>
+                <a href="/web_static/pages/content_language.html"
+                  >Content & Language</a
+                >
+              </li>
             </ul>
           </div>
           <div class="footer-title">
             <p>GUIDES</p>
             <ul>
-              <li><a href="">Data Labeling </a></li>
-              <li><a href="">ML Model Training</a></li>
-              <li><a href="">Guide to AI for eCommerce </a></li>
-              <li><a href="">Computer Vision Applications</a></li>
-              <li><a href="">Diffusion Models</a></li>
+              <li>
+                <a href="/web_static/pages/data_labeling.html"
+                  >Data Labeling
+                </a>
+              </li>
+              <li>
+                <a href="/web_static/pages/ml_model_training.html"
+                  >ML Model Training</a
+                >
+              </li>
+              <li>
+                <a href="/web_static/pages/ai_for_ecommece.html"
+                  >Guide to AI for eCommerce
+                </a>
+              </li>
+              <li>
+                <a href="/web_static/pages/computer_vision_applications.html"
+                  >Computer Vision Applications</a
+                >
+              </li>
+              <li>
+                <a href="/web_static/pages/diffusion_models.html"
+                  >Diffusion Models</a
+                >
+              </li>
             </ul>
           </div>
           <div class="footer-title">
             <p>RESOURCES</p>
             <ul>
-              <li><a href="">Blog</a></li>
-              <li><a href="">Conferences</a></li>
-              <li><a href="">Documentation</a></li>
-              <li><a href="">Events</a></li>
-              <li><a href="">Guides</a></li>
-              <li><a href="">Open Datasets</a></li>
-              <li><a href="">Research & Development </a></li>
-              <li><a href="">Resource Library</a></li>
+              <li><a href="/web_static/pages/blog.html">Blog</a></li>
+              <li>
+                <a href="/web_static/pages/conferences.html">Conferences</a>
+              </li>
+              <li>
+                <a href="/web_static/pages/documentation.html">Documentation</a>
+              </li>
+              <li><a href="/web_static/pages/events.html">Events</a></li>
+              <li><a href="/web_static/pages/guides.html">Guides</a></li>
+              <li>
+                <a href="/web_static/pages/open_datasets.html">Open Datasets</a>
+              </li>
+              <li>
+                <a href="/web_static/pages/research_development.html"
+                  >Research & Development
+                </a>
+              </li>
+              <li>
+                <a href="/web_static/pages/resource_library.html"
+                  >Resource Library</a
+                >
+              </li>
             </ul>
           </div>
           <div class="footer-title">
@@ -184,7 +283,11 @@
             <span>Copyright &copy; 2023 Yearn AI, All rights reserved.</span>
           </div>
           <div class="footer-terms">
-            <span><a href="">Terms of Use & Privacy Policy</a></span>
+            <span
+              ><a href="/web_static/pages/privacy_policy.html"
+                >Terms of Use & Privacy Policy</a
+              ></span
+            >
           </div>
         </div>
       </div>
