--- a/web_static/index.html
+++ b/web_static/index.html
@@ -272,7 +272,13 @@
               <li>support@yearnai.tech</li>
               <li>careers@yearnai.tech</li>
               <li>press@yearnai.tech</li>
-              <li>LinkedIn</li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/company/yearn-ai/"
+                  target="_blank"
+                  >LinkedIn</a
+                >
+              </li>
               <li>Twitter</li>
               <li>Facebook</li>
             </ul>
