Add header section

--- a/web_static/index.html
+++ b/web_static/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/styles/common.css" />
     <link rel="stylesheet" href="/styles/navbar.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
+    <link rel="stylesheet" href="/styles/header.css" />
     <link rel="icon" href="/images/logo.png" />
   </head>
   <body>
@@ -154,7 +155,9 @@
 
     <!-- Main Body Content Starts! -->
     <div class="container">
-      <main><h1>Main Content Goes Here!</h1></main>
+      <section class="hero-section">
+        <img src="/images/robot.jpg" alt="Robot" />
+      </section>
     </div>
     <!-- Main Body Content Ends! -->
 
