--- a/web_static/index.html
+++ b/web_static/index.html
@@ -157,6 +157,7 @@
     <div class="container">
       <section class="hero-section">
         <img src="/images/robot.jpg" alt="Robot" />
+        <div><h3>Accelerating AI Development to Africa</h3></div>
       </section>
     </div>
     <!-- Main Body Content Ends! -->
