--- a/web_static/index.html
+++ b/web_static/index.html
@@ -16,10 +16,12 @@
     <!-- Navbar Starts! -->
     <div class="navbar">
       <!-- <div class="logo">Yearn AI</div> -->
-      <img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img" />
+      <a href="/web_static/index.html"
+        ><img src="/images/logo2.png" alt="Yearn AI Logo" class="logo-img"
+      /></a>
       <div class="navigation">
         <div class="nav">
-          <p class="nav-title">Company</p>
+          <p class="nav-title"><a href="/web_static/index.html">Company</a></p>
           <ul class="nav-links-popover">
             <li><a href="/web_static/pages/about.html">About</a></li>
             <li>
