--- a/web_static/index.html
+++ b/web_static/index.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="/styles/footer.css" />
     <link rel="stylesheet" href="/styles/header.css" />
     <link rel="icon" href="/images/logo.png" />
+    <!-- ICONSCOUT CDN -->
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
   </head>
   <body>
     <!-- Navbar Starts! -->
@@ -152,6 +157,8 @@
           <!-- <li><a href="">Sign Up</a></li> -->
         </ul>
       </div>
+      <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
+      <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
     </div>
     <!-- Navbar Ends! -->
 
